--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RAHRS
 Type: Package
 Title: Data fusion filters for Attitude Heading Reference System (AHRS) with several variants of the Kalman filter and the Mahoney and Madgwick filters.
-Version: 1.0.0
+Version: 1.0.1
 Encoding: UTF-8
 Authors@R: c(person(given = "Jose'", family = "Gama", role = c("aut","cre","trl"),email = "jgama@abo.fi"),
     person(given = "Vlad", family = "Maximov", role = "aut"),
@@ -15,4 +15,4 @@ Description: R implementation of data fusion filters for Attitude Heading Refere
 License: GPL (>= 3)
 LazyLoad: yes
 LazyData: yes
-Depends: R (>= 2.7.0), pracma, RSpincalc
+Depends: R (>= 2.7.0), pracma, RSpincalc (>= 1.0.1)
