--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: RAHRS
 Type: Package
 Title: Data fusion filters for Attitude Heading Reference System (AHRS) with several variants of the Kalman filter and the Mahoney and Madgwick filters.
-Version: 1.0.1
+Version: 1.0.2
 Encoding: UTF-8
-Authors@R: c(person(given = "Jose'", family = "Gama", role = c("aut","cre","trl"),email = "jgama@abo.fi"),
+Authors@R: c(person(given = "Jose'", family = "Gama", role = c("aut","cre","trl"),email = "rxprtgama@gmail.com"),
     person(given = "Vlad", family = "Maximov", role = "aut"),
     person(given = "Sebastian", family = "O.H. Madgwick", role = "aut"),
-    person(given = "Alain", family = "Barraud", role = "ctb"),
-    person(given = "Göran", family = "Högnäs", role = "ths"))   
+    person(given = "Alain", family = "Barraud", role = "ctb"))   
 Description: R implementation of data fusion filters for Attitude Heading Reference System (AHRS) based on
     Vlad Maximov's GyroLib AHRS library (quaternion based linearized/extended/unscented Kalman filter,
     Euler based LKF, gyro-free with vector matching, SVD calibration and EKF calibration),
